--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="pt-br"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>Pedidos</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script defer="defer" src="./js/chunk-vendors.69805236.js"></script><script defer="defer" src="./js/app.00f433fa.js"></script><link href="./css/chunk-vendors.0e35c828.css" rel="stylesheet"><link href="./css/app.37f74135.css" rel="stylesheet"></head><body><noscript><strong>Desculpa, mas esta página não funcionará corretamente sem o JavaScript ativado. Por favor ative-o para continuar.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="pt-br">
+    <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="favicon.ico">
+    <title>Sistema NVS</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script defer="defer" src="./js/chunk-vendors.3d0ec85b.js"></script>
+    <script defer="defer" src="./js/app.714c044a.js"></script>
+    <link href="./css/chunk-vendors.0e35c828.css" rel="stylesheet">
+    <link href="./css/app.37f74135.css" rel="stylesheet">
+</head>
+<body>
+    <noscript><strong>Desculpa, mas esta página não funcionará corretamente sem o JavaScript ativado. Por favor ative-o para continuar.</strong></noscript>
+    <div id="app"></div>
+</body>
+</html>
