--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="favicon.ico">
-    <title>Sistema NVS</title>
+    <title>NVS Licenças</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script defer="defer" src="./js/chunk-vendors.79020e78.js"></script>
-    <script defer="defer" src="./js/app.b41727b3.js"></script>
+    <script defer="defer" src="./js/app.c6dea446.js"></script>
     <link href="./css/chunk-vendors.0e35c828.css" rel="stylesheet">
     <link href="./css/app.37f74135.css" rel="stylesheet">
 </head>
